objects/Incentive_Password__c.object
<CustomObject>
    <description>List of incentive passwords associated to an incentive password promotion</description>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <infoMessage>If the List does not display values please search for contacts</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Incentive Passwords</relationshipLabel>
        <relationshipName>Incentive_Passwords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LCRM_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CRM-11169.Created for displaying What Id in Tasks after sending email.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incentive Passwords</relationshipLabel>
        <relationshipName>Incentive_Passwords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Automated_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for USL R4.Stores value on user selection on promo password page</description>
        <label>Automated Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LCRM_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created for USL R4</description>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Trial Passwords</relationshipLabel>
        <relationshipName>Incentive_Passwords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CRM-11169.Created for displaying What Id in Tasks after sending email.</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Incentive Passwords</relationshipLabel>
        <relationshipName>Incentive_Passwords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Training_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as a part of CRM-11169.Created for displaying What Id in Tasks after sending email.</description>
        <label>Training Event</label>
        <referenceTo>Training_Event__c</referenceTo>
        <relationshipLabel>Incentive Passwords</relationshipLabel>
        <relationshipName>Incentive_Passwords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LCRM_Trial_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created for USL R4.LCRM_Trial_Indicator is used to notify whether the password will be of trial or non-trial.</description>
        <label>Trial Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Promotion</label>
        <referenceTo>Incentive_Promotion__c</referenceTo>
        <relationshipLabel>Incentive Passwords</relationshipLabel>
        <relationshipName>Incentive_Passwords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Incentive Password</label>
    <nameField>
        <label>User Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incentive Passwords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>